re PR c/24329 (segfault with -Wall and long integer literal)

PR c/24329
	* c-pretty-print.c (pp_c_type_specifier): Do not recurse if
	c_common_type_for_mode returns an unnamed type.

testsuite:
	* gcc.dg/format/unnamed-1.c: New test.

From-SVN: r106433